---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/char/test_char_literals.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/char/test_char_literals.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=56
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (as_integral_value~3 `array<char; 4>` @0)
            (braced
               (subobject +0 (truncate `char` @0 (37 `int` @4)))
               (subobject +1 (truncate `char` @1 (100 `int` @4)))
               (subobject +2 (truncate `char` @2 (10 `int` @4)))
               (subobject +3 (truncate `char` @3 (0 `int` @4)))))
         (definition (as_char~4 `array<char; 6>` @4)
            (braced
               (subobject +0 (truncate `char` @4 (60 `int` @12)))
               (subobject +1 (truncate `char` @5 (37 `int` @12)))
               (subobject +2 (truncate `char` @6 (99 `int` @12)))
               (subobject +3 (truncate `char` @7 (62 `int` @12)))
               (subobject +4 (truncate `char` @8 (10 `int` @12)))
               (subobject +5 (truncate `char` @9 (0 `int` @12)))))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (101 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (101 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (39 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (39 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (34 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (34 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (34 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (34 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (63 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (63 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (63 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (63 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (92 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (92 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (7 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (8 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (12 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (10 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 6>>` @24
                        (as_char~4 `array<char; 6>` @4))))
               (10 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (13 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (9 `int` @32)))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (as_integral_value~3 `array<char; 4>` @0))))
               (11 `int` @32))))))

----- stderr -----
